[package]
name = "bp_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = " 0.5.1"
anyhow = "1.0.68"
buttplug = "7.1.13"
tracing = "0.1.37"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.8"
funscript = "0.5.3"
futures = "0.3.25"
serde = "1.0.164"
serde_json = "1.0.99"
itertools = "0.11.0"
cxx = "1.0.95"
rand = "0.8.5"
more-asserts = "0.3.1"

[dev-dependencies]
bp_fakes = { path = "../bp_fakes" }
tracing-subscriber = "0.3.16"
tokio-test = "0.4.2"
tempfile = "3.7.0"
more-asserts = "0.3.1"
